[gd_scene load_steps=2 format=3 uid="uid://cphgxeuhywdfg"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy_parent.gd" id="1_wm476"]

[node name="EnemyMeleeParent" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 88
script = ExtResource("1_wm476")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="VulnerableCooldown" type="Timer" parent="Timers"]

[node name="Hitbox" type="CollisionShape2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="Timers/VulnerableCooldown" to="." method="_on_vulnerable_cooldown_timeout"]
